--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>password validation</title>
-    <link rel="stylesheet" href="password.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <fieldset>
@@ -37,6 +37,6 @@
             
         </form>
     </fieldset>
-    <script src="password.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
